--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,96 @@
-/*.lst
-/*.vars
-/*.yaml
-/*~*~*.bat
-/*~*~*.sh
-/.log
+arc/libarchive/*.lst
+arc/libarchive/*.vars
+arc/libarchive/*.yaml
+arc/libarchive/*~*~*.bat
+arc/libarchive/*~*~*.sh
+arc/libarchive/.log
+arc/libarchive/libarchive-3_4_1-release/*.lst
+arc/libarchive/libarchive-3_4_1-release/*.vars
+arc/libarchive/libarchive-3_4_1-release/*.yaml
+arc/libarchive/libarchive-3_4_1-release/*~*~*.bat
+arc/libarchive/libarchive-3_4_1-release/*~*~*.sh
+arc/libarchive/libarchive-3_4_1-release/.log
+arc/xzutils/*.lst
+arc/xzutils/*.vars
+arc/xzutils/*.yaml
+arc/xzutils/*~*~*.bat
+arc/xzutils/*~*~*.sh
+arc/xzutils/.log
+arc/xzutils/xzutils-5_2_4-release/*.lst
+arc/xzutils/xzutils-5_2_4-release/*.vars
+arc/xzutils/xzutils-5_2_4-release/*.yaml
+arc/xzutils/xzutils-5_2_4-release/*~*~*.bat
+arc/xzutils/xzutils-5_2_4-release/*~*~*.sh
+arc/xzutils/xzutils-5_2_4-release/.log
+log/p7client/*.lst
+log/p7client/*.vars
+log/p7client/*.yaml
+log/p7client/*~*~*.bat
+log/p7client/*~*~*.sh
+log/p7client/.log
+log/p7client/p7client-5_3_0-release/*.lst
+log/p7client/p7client-5_3_0-release/*.vars
+log/p7client/p7client-5_3_0-release/*.yaml
+log/p7client/p7client-5_3_0-release/*~*~*.bat
+log/p7client/p7client-5_3_0-release/*~*~*.sh
+log/p7client/p7client-5_3_0-release/.log
+math/qd/*.lst
+math/qd/*.vars
+math/qd/*.yaml
+math/qd/*~*~*.bat
+math/qd/*~*~*.sh
+math/qd/.log
+math/qd/qd-2_3_22-release/*.lst
+math/qd/qd-2_3_22-release/*.vars
+math/qd/qd-2_3_22-release/*.yaml
+math/qd/qd-2_3_22-release/*~*~*.bat
+math/qd/qd-2_3_22-release/*~*~*.sh
+math/qd/qd-2_3_22-release/.log
+test/googletest/*.lst
+test/googletest/*.vars
+test/googletest/*.yaml
+test/googletest/*~*~*.bat
+test/googletest/*~*~*.sh
+test/googletest/.log
+test/googletest/googletest-1_10_0-release/*.lst
+test/googletest/googletest-1_10_0-release/*.vars
+test/googletest/googletest-1_10_0-release/*.yaml
+test/googletest/googletest-1_10_0-release/*~*~*.bat
+test/googletest/googletest-1_10_0-release/*~*~*.sh
+test/googletest/googletest-1_10_0-release/.log
+utility/fmt/*.lst
+utility/fmt/*.vars
+utility/fmt/*.yaml
+utility/fmt/*~*~*.bat
+utility/fmt/*~*~*.sh
+utility/fmt/.log
+utility/fmt/fmt-6_1_2-release/*.lst
+utility/fmt/fmt-6_1_2-release/*.vars
+utility/fmt/fmt-6_1_2-release/*.yaml
+utility/fmt/fmt-6_1_2-release/*~*~*.bat
+utility/fmt/fmt-6_1_2-release/*~*~*.sh
+utility/fmt/fmt-6_1_2-release/.log
+utility/pystring/*.lst
+utility/pystring/*.vars
+utility/pystring/*.yaml
+utility/pystring/*~*~*.bat
+utility/pystring/*~*~*.sh
+utility/pystring/.log
+utility/pystring/pystring-1_1_3-20190321/*.lst
+utility/pystring/pystring-1_1_3-20190321/*.vars
+utility/pystring/pystring-1_1_3-20190321/*.yaml
+utility/pystring/pystring-1_1_3-20190321/*~*~*.bat
+utility/pystring/pystring-1_1_3-20190321/*~*~*.sh
+utility/pystring/pystring-1_1_3-20190321/.log
+utility/tacklelib/*.lst
+utility/tacklelib/*.vars
+utility/tacklelib/*.yaml
+utility/tacklelib/*~*~*.bat
+utility/tacklelib/*~*~*.sh
+utility/tacklelib/.log
+utility/tacklelib/tacklelib/*.lst
+utility/tacklelib/tacklelib/*.vars
+utility/tacklelib/tacklelib/*.yaml
+utility/tacklelib/tacklelib/*~*~*.bat
+utility/tacklelib/tacklelib/*~*~*.sh
+utility/tacklelib/tacklelib/.log
