--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+/*.lst
+/*.vars
+/*.yaml
+/*~*~*.bat
+/*~*~*.sh
+/.log
+arc/*.lst
+arc/*.vars
+arc/*.yaml
+arc/*~*~*.bat
+arc/*~*~*.sh
+arc/.log
 arc/libarchive/*.lst
 arc/libarchive/*.vars
 arc/libarchive/*.yaml
@@ -22,6 +34,12 @@ arc/xzutils/xzutils-5_2_4-release/*.yaml
 arc/xzutils/xzutils-5_2_4-release/*~*~*.bat
 arc/xzutils/xzutils-5_2_4-release/*~*~*.sh
 arc/xzutils/xzutils-5_2_4-release/.log
+log/*.lst
+log/*.vars
+log/*.yaml
+log/*~*~*.bat
+log/*~*~*.sh
+log/.log
 log/p7client/*.lst
 log/p7client/*.vars
 log/p7client/*.yaml
@@ -34,6 +52,12 @@ log/p7client/p7client-5_3_0-release/*.yaml
 log/p7client/p7client-5_3_0-release/*~*~*.bat
 log/p7client/p7client-5_3_0-release/*~*~*.sh
 log/p7client/p7client-5_3_0-release/.log
+math/*.lst
+math/*.vars
+math/*.yaml
+math/*~*~*.bat
+math/*~*~*.sh
+math/.log
 math/qd/*.lst
 math/qd/*.vars
 math/qd/*.yaml
@@ -46,6 +70,12 @@ math/qd/qd-2_3_22-release/*.yaml
 math/qd/qd-2_3_22-release/*~*~*.bat
 math/qd/qd-2_3_22-release/*~*~*.sh
 math/qd/qd-2_3_22-release/.log
+test/*.lst
+test/*.vars
+test/*.yaml
+test/*~*~*.bat
+test/*~*~*.sh
+test/.log
 test/googletest/*.lst
 test/googletest/*.vars
 test/googletest/*.yaml
@@ -58,6 +88,12 @@ test/googletest/googletest-1_10_0-release/*.yaml
 test/googletest/googletest-1_10_0-release/*~*~*.bat
 test/googletest/googletest-1_10_0-release/*~*~*.sh
 test/googletest/googletest-1_10_0-release/.log
+utility/*.lst
+utility/*.vars
+utility/*.yaml
+utility/*~*~*.bat
+utility/*~*~*.sh
+utility/.log
 utility/fmt/*.lst
 utility/fmt/*.vars
 utility/fmt/*.yaml
