--- a/math/qd/config.yaml.in
+++ b/math/qd/config.yaml.in
@@ -1,3 +1,3 @@
 WCROOT_OFFSET:                          ${CONFIGURE_ROOT}/_src/math/qd
 
-QD.SVN_SF.REPOROOT:                     svn://${SVN_SF.HUB_ROOT}/orbittools/3dparty--qd
+QD.SVN_SF.REPOROOT:                     svn://${SVN_SF.HUB_ROOT}/orbittools/qd_
