--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,9 @@ math/qd/config.yaml.in -text
 math/qd/qd-2_3_22-release/config.yaml.in -text
 test/googletest/config.yaml.in -text
 test/googletest/googletest-1_10_0-release/config.yaml.in -text
+utility/boost/boost-1_72_0-release/config.yaml.in -text
+utility/boost/boost-1_72_0-release/git_repos.lst.in -text
+utility/boost/config.yaml.in -text
 utility/fmt/config.yaml.in -text
 utility/fmt/fmt-6_2_0-release/config.yaml.in -text
 utility/pystring/config.yaml.in -text
