--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,18 @@ utility/*.sh
 utility/*.vars
 utility/*.yaml
 utility/.log
+utility/boost/*.bat
+utility/boost/*.lst
+utility/boost/*.sh
+utility/boost/*.vars
+utility/boost/*.yaml
+utility/boost/.log
+utility/boost/boost-1_72_0-release/*.bat
+utility/boost/boost-1_72_0-release/*.lst
+utility/boost/boost-1_72_0-release/*.sh
+utility/boost/boost-1_72_0-release/*.vars
+utility/boost/boost-1_72_0-release/*.yaml
+utility/boost/boost-1_72_0-release/.log
 utility/fmt/*.bat
 utility/fmt/*.lst
 utility/fmt/*.sh
